Mon Feb 19 21:02:55 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Atomic_Op.inl:
        * ace/OS_NS_unistd.inl: Adjust code for less-than-modern Win32 systems
          such as Pharlap ETS to work with 64 bit file offsets and the lack
          of interlocked exchange-add.

Mon Feb 19 18:33:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SSL/SSL_Context.h:
          Layout change

        * ace/SSL/SSL_Context.inl (check_context):
          Set the verify mode correctly, fixes bugzilla bug 2819

Mon Feb 19 12:00:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_other_tests.lst:
          Added Secure_Invocation test, this tests basic functionality but
          seems to fail at this moment because of some broken support in
          TAO

Fri Feb 16 23:48:55 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp:

          ACE_INLINE makes sense in .inl files (thanks Steve)

Fri Feb 16 13:38:04 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Dynamic_Service_Base.cpp:
        * ace/Dynamic_Service_Dependency.cpp:
        * ace/Service_Config.h:
        * ace/Service_Config.inl:
        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.inl:
        * ace/Service_Gestalt.cpp:

          Reverting my changes since "Tue Feb 13 15:35:54 UTC 2007" as it
          has been causing problems, in particular with borland and
          no-threads builds.

Fri Feb 16 12:47:03 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Service_Config.cpp (global): Removed the ACE_INLINE qualifier
          from global() - if it's in the .cpp file, it shouldn't be marked
          as inline, and isn't marked thusly in the .h file. Fixes unsats.

        * ace/Service_Config.h: Fixed spelling error.

Thu Feb 15 20:04:01 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_stdlib.cpp (mkstemp_emulation):
