@@ -1,3 +1,9 @@
+Tue Feb 20 03:08:26 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>
+
+        * tests/tests.mpc:
+        * tests/Bug_2820_Regression_Test.cpp:
+          A new test to demonstrate the problems in bug 2820.
+
 Mon Feb 19 21:02:55 UTC 2007  Steve Huston  <shuston@riverace.com>
 
         * ace/Atomic_Op.inl:
